src/objects/TriggerSupport__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Turn triggers off/on</description>
    <fields>
        <fullName>Object__c</fullName>
        <description>Name of object, trigger, rule, etc.</description>
        <label>Object</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TriggerOff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked = trigger off</description>
        <inlineHelpText>checked = trigger off</inlineHelpText>
        <label>TriggerOff</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerSupport</label>
</CustomObject>